<resources>
    <string name="app_name">Motorbike 121</string>
    <string name="title_activity_new__main">New_Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="deposit_message">Withdrawal must be less than the value!</string>
    <string name="nav_detail">Detail</string>
    <string name="detail">DETAIL</string>
    <string name="description">Detail info</string>
    <string name="Description">Description</string>
    <string name="tax">Tax Type</string>
    <string name="postcode">Post Code</string>
    <string-array name="brand">
        <item>Honda</item>
        <item>Yamaha</item>
        <item>Suzuki</item>
    </string-array>
    <string-array name="year">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>

    </string-array>
    <string name="price">Price</string>
    <string-array name="color">
        <item>Blue</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Red</item>
        <item>Gray</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Green</item>
    </string-array>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string-array name="condition">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string name="menu_profile">Profile</string>
    <string name="menu_post">Post</string>
    <string name="menu_like">Like</string>
    <string name="menu_loan">Loan</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact 121</string>
    <string name="menu_chat_admin">Chat to Admin</string>
    <string name="menu_help">Help</string>
    <string name="menu_privacy">Term of Privacy</string>
    <string name="buy1">BUY</string>
    <string name="sell1">SELL</string>
    <string name="rent">RENT</string>
    <string name="search">Search here</string>
    <string name="back">Back</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="account_toolbar">My Account</string>
    <string name="login_username">Phone Number</string>
    <string name="login_password">Password</string>
    <string name="title_activity_account"></string>
    <string name="update_now">Update Now</string>
    <string name="update_message">Your application update is available.</string>
    <string name="search_all">Search All Products</string>
    <string-array name="category">
        <item>Electronic</item>
        <item>Motorbike</item>
    </string-array>
    <string name="google_maps_key">AIzaSyA4GHayq3AVbLLaSeipU3lC63tzDF8DWY4 </string>
    <string name="facebook_app_id">596607940863011</string>
    <string name="fb_login_protocol_scheme">fb596607940863011</string>
    <string name="ok_dob" translatable="false">Ok</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="place">Place of birth</string>
    <string-array name="status">
        <item>Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string name="location">Location</string>
    <string name="cancel_dob" translatable="false">Cancel</string>
    <string name="title_Login">Login account</string>
    <string name="title_registration">Register to post free ad</string>
    <string name="login_failure">Login failure</string>
    <string name="phone_number">Phone Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="Password">Password</string>
    <string name="alert_phone">Wrong phone number</string>
    <string name="alert_phone1">Phone Number is empty</string>
    <string name="secret_number">Wrong password</string>
    <string name="secret_number1">Password is empty</string>
    <string name="head_dialog_login">Login failure!</string>
    <string name="wrong_pass_phone">Your password or your phone number went wrong!</string>
    <string name="confirm">Confirm Password</string>
    <string name="or">Or</string>
    <string name="head_mss">Message</string>
    <string name="title_mss">Corrected!</string>
    <string name="btn_alert">Ok</string>
    <string name="title_wrong">Your phone or password is wrong!</string>
    <string name="register_by_facebook">Register by using your facebook account</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="language2">English</string>
    <string name="khmer">Khmer</string>
    <string name="setting">Setting</string>
    <string name="version">Version</string>
    <string name="logout">Sign out</string>
    <string name="app_setting">APP SETTING</string>
    <string name="account_setting">Account Setting</string>
    <string name="txt_account_setting">Account Setting</string>
    <string name="hit_fistname">Fist Name</string>
    <string name="call_to_seller">Call to the seller</string>
    <string name="hit_lastname">Last Name</string>
    <string name="hit_store">Store/Company Name</string>
    <string name="hit_about_shop">About Shop/Company</string>
    <string name="hit_wingnumber">Wing Account Number</string>
    <string name="hit_wingaccount">Wing Account Name</string>
    <string name="hit_dealer">Dealer</string>
    <string name="product_discount">Best Deal</string>
    <string name="new_post">New Post</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="camera">Post Ad</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="motor">Motorbike</string>
    <string name="electronic">Electronic</string>
    <string name="vehicle">Vehicle</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="sell_t">SELL</string>
    <string name="buy_t">BUY</string>
    <string name="post">Post</string>
    <string name="like">Like</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="renew_password">Re-New Password</string>
    <string name="enter_renew_password">Enter re-new password</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter your old password</string>
    <string name="condition_change_password">You will use the new password to access your account.</string>
    <string name="yes_loan">Yes</string>
    <string name="no_loan">No</string>
    <string name="contact_number">Contact Phone Number</string>
    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="select">Select</string>
    <string name="login_button">Login</string>
    <string name="clear_all_label">Clear</string>
    <string name="closed_search">BACK</string>
    <string name="scoopy">Scoopy-I 2020</string>
    <string name="icon">Icon</string>
    <string name="dream">Dream</string>
    <string name="panasonicc">Panasonic 3.5kW</string>
    <string name="lgg_tv_28">LG- TV28L</string>
    <string name="smash_v">Suzuki Smash-V</string>
    <string name="zoomer_x">Zoomer-X 2020</string>
    <string name="create_loan">Your create</string>
    <string name="for_loan_title">Message</string>
    <string name="for_reomve_title">Remove Post</string>
    <string name="already_created">You cannot request duplicate loan.</string>
    <string name="title_fill_information">Fill in Information</string>
    <string name="txt_clr_detail">DETAIL</string>
    <string name="hit_username">Username</string>
    <string name="hit_shop_name">Shop Name 1</string>
    <string name="hit_gender">Gender</string>
    <string name="hit_age">Age</string>
    <string name="hit_job">Job</string>
    <string name="hit_mon_income">Monthy Average Income</string>
    <string name="hit_mon_expense">Monthy Average Expense</string>
    <string name="hit_phone1">Phone 1</string>
    <string name="hit_phone2">Phone 2</string>
    <string name="hit_phone3">Phone 3</string>
    <string name="hit_email">Email</string>
    <string name="txt_clr_information">LOAN INFORMATION</string>
    <string name="loan_information">Loan Information</string>
    <string name="hit_loan_amount">Loan Amount</string>
    <string name="hit_loan_duration">Loan Duration (month)</string>
    <string name="hit_purpos">Loan Purpose</string>
    <string name="hit_status">Status</string>
    <string name="txt_clr_supporting">LOAN SUPPORTING DOCUMENT</string>
    <string name="hit_state_id">State ID</string>
    <string name="hit_family_book">Family Book</string>
    <string name="hit_staffid">Staff ID/ Salary Slip</string>
    <string name="hit_hourse">House Plant</string>
    <string name="loan_calculation">LOAN CALCULATION</string>
    <string name="loan_calculation_title">Loan Calculation</string>
    <string name="title_loan_price">Price ($)</string>
    <string name="title_loan_interest_rate">Interest Rate (%)</string>
    <string name="title_loan_deposit">Deposit ($)</string>
    <string name="title_loan_term">Loan Term(Month)</string>
    <string name="title_monthly_payment">Monthly Payment</string>
    <string name="hit_co_borrower">Co-Borrower</string>
    <string name="button_remove">Remove</string>
    <string name="year1">2000</string>
    <string name="year2">2001</string>
    <string name="year3">2002</string>
    <string name="year4">2003</string>
    <string name="year5">2004</string>
    <string name="year6">2005</string>
    <string name="year7">2006</string>
    <string name="year8">2007</string>
    <string name="year9">2008</string>
    <string name="year10">2009</string>
    <string name="year11">2010</string>
    <string name="year12">2011</string>
    <string name="year13">2012</string>
    <string name="year14">2013</string>
    <string name="year15">2015</string>
    <string name="year16">2016</string>
    <string name="year17">2017</string>
    <string name="year18">2018</string>
    <string name="year19">2019</string>
    <string name="year20">2020</string>
    <string name="year21">2021</string>
    <string name="year22">2022</string>
    <string name="head_shop_121">121 Shoppe Co., Ltd</string>
    <string name="address_contact_us">Address :	LSI Building (3rd floor), Phnom Penh-Hanio Friendship Blvd.
                  (#1019), SK. Kouk Khleang, KH. Sen Sok, Phnom Penh</string>
    <string name="telephone_contact_us">Telephone :	069 99 00 37 / 089 99 00 37</string>
    <string name="telephone_2">069 99 00 57 / 089 99 00 57</string>
    <string name="email_contact_us">E-mail :		Info.121shoppe@gmail.com</string>
    <string name="website_contact_us">Website :	121shoppe.com</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="ok">Ok</string>
    <string name="all">All</string>
</resources>