<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_post"
            android:title="@string/menu_post" />
        <item
            android:id="@+id/nav_like"
            android:title="@string/menu_like" />
        <item
            android:id="@+id/nav_loan"
            android:title="@string/menu_loan" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_privacy"
            android:title="@string/menu_privacy" />
    </group>

</menu>
