<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_nav"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/post_nav"
        android:title="@string/post"/>

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chat_nav"
        android:title="@string/chat"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/bell"
        android:title="@string/notification"/>

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/login_nav"
        android:title="@string/account"/>
</menu>