<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_home_vector"
        android:title="@string/home"/>
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/camera"/>
    <item
        android:id="@+id/message"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/chat"/>
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications_active_black_24dp"
        android:title="@string/notification"/>
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account"/>
</menu>