<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/my_toolbar"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/tvBack_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/chevron_left_36"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_16"
            android:text="@string/back_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_contact"
            android:textSize="@dimen/page_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:gravity="center_vertical"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_shop_121"
        android:paddingTop="16dp"
        android:textStyle="normal"
        android:textColor="@color/blue_light"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_contact_us"
        android:paddingTop="20dp"
        android:textStyle="normal"
        android:textColor="@color/colorSubmitButton"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephone_contact_us"
        android:paddingTop="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorSubmitButton"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephone_2"
        android:textStyle="normal"
        android:textColor="@color/colorSubmitButton"
        android:paddingLeft="88dp"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_contact_us"
        android:paddingTop="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorSubmitButton"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website_contact_us"
        android:paddingTop="16dp"
        android:textStyle="normal"
        android:textColor="@color/colorSubmitButton"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingBottom="0dp"
        android:textSize="16sp"/>

</LinearLayout>