<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Login_Register.RegisterPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_number"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/phone_number"
            android:inputType="text"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_password"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/Password"
            android:inputType="textPassword"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_confirm_password"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:hint="@string/confirm"
            android:inputType="text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@drawable/mybutton"
            android:layout_marginTop="36dp"
            android:textColor="#FFF"
            android:text="@string/submit_button"/>
    </LinearLayout>

</RelativeLayout>